Update static pages
Use the <mlang> tag in the title instead of the multilang class to translate the static pages.

--- a/statics_pages/privacy_policy.html
+++ b/statics_pages/privacy_policy.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <title>
+      {mlang en}  Privacy Policy{mlang}
+      {mlang es}  Políticas de Privacidad {mlang}
+      {mlang pt} {mlang}
+      {mlang fr} {mlang} </title>
   </head>
   <body>
     <div class="img_tt ktt_wrapper">
-      <h1>
-        <span lang="en" class="multilang">Privacy Policy</span>
-        <span lang="fr" class="multilang"></span>
-        <span lang="pt" class="multilang"></span>
-        <span lang="es" class="multilang"></span>
-      </h1>
       <p>
         <span lang="en" class="multilang">At the International Planned Parenthood Federation/Western Hemisphere Region (Fòs Feminista), 
           we value the privacy of our supporters and online visitors. We have instituted this Privacy Policy to ensure that your personal 
