--- a/statics_pages/terms_of_use.html
+++ b/statics_pages/terms_of_use.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <title>
+      {mlang en}Terms of Use{mlang}
+      {mlang es} {mlang}
+      {mlang pt} {mlang}
+      {mlang fr} {mlang} 
+    </title>
   </head>
   <body>
     <div class="img_tt ktt_wrapper">
-      <h1>
-        <span lang="en" class="multilang">Terms of Use</span>
-        <span lang="fr" class="multilang"></span>
-        <span lang="pt" class="multilang"></span>
-        <span lang="es" class="multilang"></span>
-      </h1>
       <p>
         <span lang="en" class="multilang">Welcome to the Learning Management System of Fòs Feminista. The content provided on our Platform (collectively 
           the “Platforms” (“Platform” includes all web domains and mobile applications operated by or on behalf of Fòs Feminista)) is subject to these Terms of Use. 
