Limit the tool or resource title to less than 100

--- a/dev/addentry.html
+++ b/dev/addentry.html
@@ -39,7 +39,7 @@
           <div class="i-arrow down"></div>
         </div>
         <div class="description-cont">
-          <div class="description limit-text"></div>
+          <div class="description"></div>
         </div>
       </div>
     </div>
