--- a/dev/addentry.html
+++ b/dev/addentry.html
@@ -35,12 +35,6 @@
           </h6>
         </div>
         <div class="value">[[Upload Date]]</div>
-        <div class="cta">
-          <div class="i-arrow down"></div>
-        </div>
-        <div class="description-cont">
-          <div class="description"></div>
-        </div>
       </div>
     </div>
   </div>
@@ -97,127 +91,131 @@
       </div>
     </div>
   </div>
-  <!-- Category / Year of completion & Author -->
+  <!-- Category -->
   <div class="item_custom">
     <div class="cnt_row4">
-      <!-- Category -->
-      <div class="col1">
-        <div class="field">
-          <h6>
-            {mlang en}Category:{mlang}{mlang es}Categoría:{mlang}{mlang
-            pt}Categoria:{mlang}{mlang fr}Catégorie:{mlang}
-          </h6>
-        </div>
-        <div class="value">[[Category]]</div>
-        <div class="cta">
-          <div class="i-arrow down"></div>
-        </div>
-        <div class="description-cont">
-          <div class="description">
+      <div class="field">
+        <h6>
+          {mlang en}Category:{mlang}{mlang es}Categoría:{mlang}{mlang pt}Categoria:{mlang}{mlang fr}Catégorie:{mlang}
+        </h6>
+      </div>
+      <div class="value">[[Category]]</div>
+      <div class="cta">
+        <div class="i-arrow down"></div>
+      </div>
+      <div class="description-cont">
+        <div class="description">
             {mlang en}
             <p>Select the type of evidence-based tool that is being shared:</p>
-            <ul>
-              <li>
-                Quality of care assessment (any evidence-based method that
-                allows for evaluation of SRH care quality)
-              </li>
-              <li>
-                Research (methods and/or results of a systematic investigation)
-              </li>
-              <li>
-                Narrative (transformative story, argument, and messaging that
-                enables learning, shifts opinions, and/or moves people to take
-                action)
-              </li>
-              <li>
-                General tool (other evidence-based resources, such as protocols,
-                curriculums, and templates, that can be used to advance SRHRJ)
-              </li>
-            </ul>
-            {mlang} {mlang es}
-            <p>
-              Seleccione el tipo de herramienta basada en la evidencia que se
-              está compartiendo:
-            </p>
-            <ul>
-              <li>
-                Evaluación de la calidad de la atención (cualquier herramienta
-                basada en la evidencia que permita evaluar la calidad de la
-                atención de SSR)
-              </li>
-              <li>
-                Investigación (métodos y/o resultados de una investigación
-                sistemática)
-              </li>
-              <li>
-                Narrativa (historias, argumentos y mensajes transformadores que
-                permitan el aprendizaje, cambien las opiniones y/o muevan a las
-                personas a actuar)
-              </li>
-              <li>
-                Herramienta general (otros recursos basados en la evidencia,
-                como protocolos, currículos y plantillas, que pueden utilizarse
-                para promover la SDJSR)
-              </li>
-            </ul>
-            {mlang} {mlang pt}
-            <p>
-              Selecione o tipo de ferramenta baseada em evidências que está
-              sendo compartilhada:
-            </p>
-            <ul>
-              <li>
-                Avaliação da qualidade do atendimento (qualquer método baseado
-                em evidências que permita a avaliação da qualidade do
-                atendimento em SSR)
-              </li>
-              <li>
-                Pesquisa (métodos e/ou resultados de uma investigação
-                sistemática)
-              </li>
-              <li>
-                Narrativa (história transformadora, argumento e mensagens que
-                permitem o aprendizado, mudam opiniões e/ou levam as pessoas a
-                agir)
-              </li>
-              <li>
-                Ferramenta geral (outros recursos baseados em evidências, como
-                protocolos, currículos e modelos, que podem ser usados para
-                promover a SRHRJ)
-              </li>
-            </ul>
-            {mlang} {mlang fr}
-            <p>
-              Sélectionnez le type d'outil fondé sur des données probantes qui
-              est partagé:
-            </p>
-            <ul>
-              <li>
-                Évaluation de la qualité des soins (toute méthode fondée sur des
-                données probantes permettant d'évaluer la qualité des soins de
-                santé sexuelle et reproductive)
-              </li>
-              <li>
-                Recherche (méthodes et/ou résultats d'une enquête systématique)
-              </li>
-              <li>
-                Narration (histoire, argument et message transformateurs qui
-                permettent d'apprendre, de changer d'opinion et/ou d'inciter les
-                gens à agir)
-              </li>
-              <li>
-                Outil général (autres ressources fondées sur des données
-                probantes, telles que des protocoles, des programmes et des
-                modèles, qui peuvent être utilisées pour faire progresser la
-                SSRDJ)
-              </li>
-            </ul>
-            {mlang}
-          </div>
+              <ul>
+                  <li>
+                    Quality of care assessment (any evidence-based method that
+                    allows for evaluation of SRH care quality)
+                  </li>
+                  <li>
+                    Research (methods and/or results of a systematic investigation)
+                  </li>
+                  <li>
+                    Narrative (transformative story, argument, and messaging that
+                    enables learning, shifts opinions, and/or moves people to take
+                    action)
+                  </li>
+                  <li>
+                    General tool (other evidence-based resources, such as protocols,
+                    curriculums, and templates, that can be used to advance SRHRJ)
+                  </li>
+              </ul>
+              {mlang}
+              {mlang es}
+              <p>
+                  Seleccione el tipo de herramienta basada en la evidencia que se
+                  está compartiendo:
+              </p>
+              <ul>
+                  <li>
+                    Evaluación de la calidad de la atención (cualquier herramienta
+                    basada en la evidencia que permita evaluar la calidad de la
+                    atención de SSR)
+                  </li>
+                  <li>
+                    Investigación (métodos y/o resultados de una investigación
+                    sistemática)
+                  </li>
+                  <li>
+                    Narrativa (historias, argumentos y mensajes transformadores que
+                    permitan el aprendizaje, cambien las opiniones y/o muevan a las
+                    personas a actuar)
+                  </li>
+                  <li>
+                    Herramienta general (otros recursos basados en la evidencia,
+                    como protocolos, currículos y plantillas, que pueden utilizarse
+                    para promover la SDJSR)
+                  </li>
+              </ul>
+              {mlang}
+              {mlang pt}
+              <p>
+                  Selecione o tipo de ferramenta baseada em evidências que está
+                  sendo compartilhada:
+              </p>
+              <ul>
+                  <li>
+                    Avaliação da qualidade do atendimento (qualquer método baseado
+                    em evidências que permita a avaliação da qualidade do
+                    atendimento em SSR)
+                  </li>
+                  <li>
+                    Pesquisa (métodos e/ou resultados de uma investigação
+                    sistemática)
+                  </li>
+                  <li>
+                    Narrativa (história transformadora, argumento e mensagens que
+                    permitem o aprendizado, mudam opiniões e/ou levam as pessoas a
+                    agir)
+                  </li>
+                  <li>
+                    Ferramenta geral (outros recursos baseados em evidências, como
+                    protocolos, currículos e modelos, que podem ser usados para
+                    promover a SRHRJ)
+                  </li>
+              </ul>
+              {mlang}
+              {mlang fr}
+              <p>
+                  Sélectionnez le type d'outil fondé sur des données probantes qui
+                  est partagé:
+              </p>
+              <ul>
+                  <li>
+                    Évaluation de la qualité des soins (toute méthode fondée sur des
+                    données probantes permettant d'évaluer la qualité des soins de
+                    santé sexuelle et reproductive)
+                  </li>
+                  <li>
+                    Recherche (méthodes et/ou résultats d'une enquête systématique)
+                  </li>
+                  <li>
+                    Narration (histoire, argument et message transformateurs qui
+                    permettent d'apprendre, de changer d'opinion et/ou d'inciter les
+                    gens à agir)
+                  </li>
+                  <li>
+                    Outil général (autres ressources fondées sur des données
+                    probantes, telles que des protocoles, des programmes et des
+                    modèles, qui peuvent être utilisées pour faire progresser la
+                    SSRDJ)
+                  </li>
+              </ul>
+              {mlang}
         </div>
       </div>
+    </div>
+  </div>
+  <!-- Year of completion & Author -->
+  <div class="item_custom">
+    <div class="cnt_row5">
       <!-- Year of completion -->
-      <div class="col2">
+      <div class="col1">
         <div class="field">
           <h6>
             {mlang en}Year of completion:{mlang}{mlang es}Año de
@@ -239,7 +237,7 @@
         </div>
       </div>
       <!-- Author -->
-      <div class="col3">
+      <div class="col2">
         <div class="field">
           <h6>
             {mlang en}Author:{mlang}{mlang es}Nombre del autor:{mlang}{mlang
@@ -262,7 +260,7 @@
   </div>
   <!-- Needs -->
   <div class="item_custom">
-    <div class="cnt_row5">
+    <div class="cnt_row6">
       <div class="field">
         <h6>
           {mlang en}Needs:{mlang}{mlang es}Necesidad:{mlang}{mlang
@@ -287,7 +285,7 @@
   </div>
   <!-- Comments -->
   <div class="item_custom">
-    <div class="cnt_row6">
+    <div class="cnt_row7">
       <div class="field">
         <h6>
           {mlang en}Comments:{mlang}{mlang es}Comentarios:{mlang}{mlang
@@ -319,7 +317,7 @@
   </div>
   <!-- Links -->
   <div class="item_custom">
-    <div class="cnt_row7">
+    <div class="cnt_row8">
       <div class="field">
         <h6>
           {mlang en}Link:{mlang}{mlang es}Enlace:{mlang}{mlang
@@ -343,7 +341,7 @@
   </div>
   <!-- Files -->
   <div class="item_custom">
-    <div class="cnt_row8">
+    <div class="cnt_row9">
       <!-- EN -->
       <div class="col1">
         <div class="field">
