--- a/dev/addentry.html
+++ b/dev/addentry.html
@@ -96,7 +96,8 @@
     <div class="cnt_row4">
       <div class="field">
         <h6>
-          {mlang en}Category:{mlang}{mlang es}Categoría:{mlang}{mlang pt}Categoria:{mlang}{mlang fr}Catégorie:{mlang}
+          {mlang en}Category:{mlang}{mlang es}Categoría:{mlang}{mlang
+          pt}Categoria:{mlang}{mlang fr}Catégorie:{mlang}
         </h6>
       </div>
       <div class="value">[[Category]]</div>
@@ -105,108 +106,104 @@
       </div>
       <div class="description-cont">
         <div class="description">
-            {mlang en}
-            <p>Select the type of evidence-based tool that is being shared:</p>
-              <ul>
-                  <li>
-                    Quality of care assessment (any evidence-based method that
-                    allows for evaluation of SRH care quality)
-                  </li>
-                  <li>
-                    Research (methods and/or results of a systematic investigation)
-                  </li>
-                  <li>
-                    Narrative (transformative story, argument, and messaging that
-                    enables learning, shifts opinions, and/or moves people to take
-                    action)
-                  </li>
-                  <li>
-                    General tool (other evidence-based resources, such as protocols,
-                    curriculums, and templates, that can be used to advance SRHRJ)
-                  </li>
-              </ul>
-              {mlang}
-              {mlang es}
-              <p>
-                  Seleccione el tipo de herramienta basada en la evidencia que se
-                  está compartiendo:
-              </p>
-              <ul>
-                  <li>
-                    Evaluación de la calidad de la atención (cualquier herramienta
-                    basada en la evidencia que permita evaluar la calidad de la
-                    atención de SSR)
-                  </li>
-                  <li>
-                    Investigación (métodos y/o resultados de una investigación
-                    sistemática)
-                  </li>
-                  <li>
-                    Narrativa (historias, argumentos y mensajes transformadores que
-                    permitan el aprendizaje, cambien las opiniones y/o muevan a las
-                    personas a actuar)
-                  </li>
-                  <li>
-                    Herramienta general (otros recursos basados en la evidencia,
-                    como protocolos, currículos y plantillas, que pueden utilizarse
-                    para promover la SDJSR)
-                  </li>
-              </ul>
-              {mlang}
-              {mlang pt}
-              <p>
-                  Selecione o tipo de ferramenta baseada em evidências que está
-                  sendo compartilhada:
-              </p>
-              <ul>
-                  <li>
-                    Avaliação da qualidade do atendimento (qualquer método baseado
-                    em evidências que permita a avaliação da qualidade do
-                    atendimento em SSR)
-                  </li>
-                  <li>
-                    Pesquisa (métodos e/ou resultados de uma investigação
-                    sistemática)
-                  </li>
-                  <li>
-                    Narrativa (história transformadora, argumento e mensagens que
-                    permitem o aprendizado, mudam opiniões e/ou levam as pessoas a
-                    agir)
-                  </li>
-                  <li>
-                    Ferramenta geral (outros recursos baseados em evidências, como
-                    protocolos, currículos e modelos, que podem ser usados para
-                    promover a SRHRJ)
-                  </li>
-              </ul>
-              {mlang}
-              {mlang fr}
-              <p>
-                  Sélectionnez le type d'outil fondé sur des données probantes qui
-                  est partagé:
-              </p>
-              <ul>
-                  <li>
-                    Évaluation de la qualité des soins (toute méthode fondée sur des
-                    données probantes permettant d'évaluer la qualité des soins de
-                    santé sexuelle et reproductive)
-                  </li>
-                  <li>
-                    Recherche (méthodes et/ou résultats d'une enquête systématique)
-                  </li>
-                  <li>
-                    Narration (histoire, argument et message transformateurs qui
-                    permettent d'apprendre, de changer d'opinion et/ou d'inciter les
-                    gens à agir)
-                  </li>
-                  <li>
-                    Outil général (autres ressources fondées sur des données
-                    probantes, telles que des protocoles, des programmes et des
-                    modèles, qui peuvent être utilisées pour faire progresser la
-                    SSRDJ)
-                  </li>
-              </ul>
-              {mlang}
+          {mlang en}
+          <p>Select the type of evidence-based tool that is being shared:</p>
+          <ul>
+            <li>
+              Quality of care assessment (any evidence-based method that allows
+              for evaluation of SRH care quality)
+            </li>
+            <li>
+              Research (methods and/or results of a systematic investigation)
+            </li>
+            <li>
+              Narrative (transformative story, argument, and messaging that
+              enables learning, shifts opinions, and/or moves people to take
+              action)
+            </li>
+            <li>
+              General tool (other evidence-based resources, such as protocols,
+              curriculums, and templates, that can be used to advance SRHRJ)
+            </li>
+          </ul>
+          {mlang} {mlang es}
+          <p>
+            Seleccione el tipo de herramienta basada en la evidencia que se está
+            compartiendo:
+          </p>
+          <ul>
+            <li>
+              Evaluación de la calidad de la atención (cualquier herramienta
+              basada en la evidencia que permita evaluar la calidad de la
+              atención de SSR)
+            </li>
+            <li>
+              Investigación (métodos y/o resultados de una investigación
+              sistemática)
+            </li>
+            <li>
+              Narrativa (historias, argumentos y mensajes transformadores que
+              permitan el aprendizaje, cambien las opiniones y/o muevan a las
+              personas a actuar)
+            </li>
+            <li>
+              Herramienta general (otros recursos basados en la evidencia, como
+              protocolos, currículos y plantillas, que pueden utilizarse para
+              promover la SDJSR)
+            </li>
+          </ul>
+          {mlang} {mlang pt}
+          <p>
+            Selecione o tipo de ferramenta baseada em evidências que está sendo
+            compartilhada:
+          </p>
+          <ul>
+            <li>
+              Avaliação da qualidade do atendimento (qualquer método baseado em
+              evidências que permita a avaliação da qualidade do atendimento em
+              SSR)
+            </li>
+            <li>
+              Pesquisa (métodos e/ou resultados de uma investigação sistemática)
+            </li>
+            <li>
+              Narrativa (história transformadora, argumento e mensagens que
+              permitem o aprendizado, mudam opiniões e/ou levam as pessoas a
+              agir)
+            </li>
+            <li>
+              Ferramenta geral (outros recursos baseados em evidências, como
+              protocolos, currículos e modelos, que podem ser usados para
+              promover a SRHRJ)
+            </li>
+          </ul>
+          {mlang} {mlang fr}
+          <p>
+            Sélectionnez le type d'outil fondé sur des données probantes qui est
+            partagé:
+          </p>
+          <ul>
+            <li>
+              Évaluation de la qualité des soins (toute méthode fondée sur des
+              données probantes permettant d'évaluer la qualité des soins de
+              santé sexuelle et reproductive)
+            </li>
+            <li>
+              Recherche (méthodes et/ou résultats d'une enquête systématique)
+            </li>
+            <li>
+              Narration (histoire, argument et message transformateurs qui
+              permettent d'apprendre, de changer d'opinion et/ou d'inciter les
+              gens à agir)
+            </li>
+            <li>
+              Outil général (autres ressources fondées sur des données
+              probantes, telles que des protocoles, des programmes et des
+              modèles, qui peuvent être utilisées pour faire progresser la
+              SSRDJ)
+            </li>
+          </ul>
+          {mlang}
         </div>
       </div>
     </div>
@@ -342,92 +339,69 @@
   <!-- Files -->
   <div class="item_custom">
     <div class="cnt_row9">
-      <!-- EN -->
-      <div class="col1">
-        <div class="field">
-          <h6>
-            {mlang en}File EN:{mlang}{mlang es}Archivo EN:{mlang}{mlang
-            pt}Arquivo EN:{mlang}{mlang fr}Fichier EN:{mlang}
-          </h6>
-        </div>
-        <div class="value">[[File EN]]</div>
-        <div class="cta">
-          <div class="i-arrow down"></div>
-        </div>
-        <div class="description-cont">
-          <div class="description">
-            {mlang en}The name of your organization (which created the tool or
-            resource){mlang} {mlang es}El nombre de su organización (que creó la
-            herramienta o el recurso){mlang} {mlang pt}O nome de sua organização
-            (que criou a ferramenta ou o recurso){mlang} {mlang fr}Le nom de
-            votre organisation (qui a créé l'outil ou la ressource){mlang}
+      <div class="field">
+        <h6>
+          {mlang en}Files:{mlang}{mlang es}Archivos:{mlang}{mlang
+          pt}Arquivos:{mlang}{mlang fr}Des Dossiers:{mlang}
+        </h6>
+      </div>
+
+      <div class="value-cont">
+        <!-- EN -->
+        <div class="col1">
+          <div class="field">
+            <h6>
+              {mlang en}File EN{mlang}{mlang es}Archivo EN{mlang}{mlang
+              pt}Arquivo EN{mlang}{mlang fr}Fichier EN{mlang}
+            </h6>
           </div>
+          <div class="value">[[File EN]]</div>
+        </div>
+        <!-- ES -->
+        <div class="col2">
+          <div class="field">
+            <h6>
+              {mlang en}File ES{mlang}{mlang es}Archivo ES{mlang}{mlang
+              pt}Arquivo ES{mlang}{mlang fr}Fichier ES{mlang}
+            </h6>
+          </div>
+          <div class="value">[[File ES]]</div>
+        </div>
+        <!-- FR -->
+        <div class="col3">
+          <div class="field">
+            <h6>
+              {mlang en}File FR{mlang}{mlang es}Archivo FR{mlang}{mlang
+              pt}Arquivo FR{mlang}{mlang fr}Fichier FR{mlang}
+            </h6>
+          </div>
+          <div class="value">[[File FR]]</div>
+        </div>
+        <!-- PT -->
+        <div class="col4">
+          <div class="field">
+            <h6>
+              {mlang en}File PT{mlang}{mlang es}Archivo PT{mlang}{mlang
+              pt}Arquivo PT{mlang}{mlang fr}Fichier PT{mlang}
+            </h6>
+          </div>
+          <div class="value">[[File PT]]</div>
         </div>
       </div>
-      <!-- ES -->
-      <div class="col2">
-        <div class="field">
-          <h6>
-            {mlang en}File ES:{mlang}{mlang es}Archivo ES:{mlang}{mlang
-            pt}Arquivo ES:{mlang}{mlang fr}Fichier ES:{mlang}
-          </h6>
-        </div>
-        <div class="value">[[File ES]]</div>
-        <div class="cta">
-          <div class="i-arrow down"></div>
-        </div>
-        <div class="description-cont">
-          <div class="description">
-            {mlang en}The name of your organization (which created the tool or
-            resource){mlang} {mlang es}El nombre de su organización (que creó la
-            herramienta o el recurso){mlang} {mlang pt}O nome de sua organização
-            (que criou a ferramenta ou o recurso){mlang} {mlang fr}Le nom de
-            votre organisation (qui a créé l'outil ou la ressource){mlang}
-          </div>
-        </div>
+
+      <div class="cta">
+        <div class="i-arrow down"></div>
       </div>
-      <!-- FR -->
-      <div class="col3">
-        <div class="field">
-          <h6>
-            {mlang en}File FR:{mlang}{mlang es}Archivo FR:{mlang}{mlang
-            pt}Arquivo FR:{mlang}{mlang fr}Fichier FR:{mlang}
-          </h6>
-        </div>
-        <div class="value">[[File FR]]</div>
-        <div class="cta">
-          <div class="i-arrow down"></div>
-        </div>
-        <div class="description-cont">
-          <div class="description">
-            {mlang en}The name of your organization (which created the tool or
-            resource){mlang} {mlang es}El nombre de su organización (que creó la
-            herramienta o el recurso){mlang} {mlang pt}O nome de sua organização
-            (que criou a ferramenta ou o recurso){mlang} {mlang fr}Le nom de
-            votre organisation (qui a créé l'outil ou la ressource){mlang}
-          </div>
-        </div>
-      </div>
-      <!-- PT -->
-      <div class="col4">
-        <div class="field">
-          <h6>
-            {mlang en}File PT:{mlang}{mlang es}Archivo PT:{mlang}{mlang
-            pt}Arquivo PT:{mlang}{mlang fr}Fichier PT:{mlang}
-          </h6>
-        </div>
-        <div class="value">[[File PT]]</div>
-        <div class="cta">
-          <div class="i-arrow down"></div>
-        </div>
-        <div class="description-cont">
-          <div class="description">
-            {mlang en}The name of your organization (which created the tool or
-            resource){mlang} {mlang es}El nombre de su organización (que creó la
-            herramienta o el recurso){mlang} {mlang pt}O nome de sua organização
-            (que criou a ferramenta ou o recurso){mlang} {mlang fr}Le nom de
-            votre organisation (qui a créé l'outil ou la ressource){mlang}
-          </div>
+      <div class="description-cont">
+        <div class="description">
+          {mlang en}Upload at least one file, note that it has four controls to
+          upload files in different languages{mlang} {mlang es}Cargue al menos
+          un archivo, fijese bien en que dispone cuatro controles para subir
+          archivos en diferentes idiomas{mlang} {mlang pt}Faça upload de pelo
+          menos um arquivo, observe que ele possui quatro controles para fazer
+          upload de arquivos em diferentes idiomas{mlang} {mlang fr}Téléchargez
+          au moins un fichier, notez qu'il dispose de quatre commandes pour
+          télécharger des fichiers dans différentes langues{mlang}
         </div>
       </div>
     </div>
