--- a/dev/single-view/single-view.html
+++ b/dev/single-view/single-view.html
@@ -61,7 +61,7 @@
             </h6>
           </div>
           <div class="data-cnt">
-            <div class="data-item">[[Organization EN]]</div>
+            <div class="data-item">[[Organization]]</div>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
             </h6>
           </div>
           <div class="data-cnt">
-            <div class="data-item">[[Category EN]]</div>
+            <div class="data-item">[[Category]]</div>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
               </h6>
             </div>
             <div class="data-cnt">
-              <div class="data-item">[[Year of Completion EN]]</div>
+              <div class="data-item">[[Year of Completion]]</div>
             </div>
           </div>
         </div>
@@ -110,7 +110,7 @@
               </h6>
             </div>
             <div class="data-cnt">
-              <div class="data-item">[[Author EN]]</div>
+              <div class="data-item">[[Author]]</div>
             </div>
           </div>
         </div>
@@ -128,8 +128,7 @@
           </div>
           <div class="data-cnt">
             <div class="data-item">
-              <div>[[Needs1]]</div>
-              <div>[[Needs2]]</div>
+              <div>[[Needs]]</div>
             </div>
           </div>
         </div>
@@ -162,7 +161,7 @@
             </h6>
           </div>
           <div class="data-cnt">
-            <div class="data-item">[[Link EN]]</div>
+            <div class="data-item">[[Link]]</div>
           </div>
         </div>
       </div>
