--- a/dev/list-view/list-view-grid.html
+++ b/dev/list-view/list-view-grid.html
@@ -1,38 +1,31 @@
 <!-- Table header -->
 <div class="slst_body">
   <div class="grid-table-slst">
-
     <div class="header_item">
       {mlang en}Category{mlang}{mlang es}Categoría{mlang}{mlang
       pt}Categoria{mlang}{mlang fr}Catégorie{mlang}
     </div>
-
     <div class="header_item">
       {mlang en}Needs{mlang}{mlang es}Necesidad{mlang}{mlang
       pt}Necessidade{mlang}{mlang fr}Nécessité{mlang}
     </div>
-
-    <div class="header_item item-mxw">
+    <div class="header_item">
       {mlang en}Title [Year] & description{mlang}{mlang
       es}Título [Año] y descripción{mlang}{mlang pt}Título [Ano] e
       descrição{mlang}{mlang fr}Titre [Année] et description{mlang}
     </div>
-
     <div class="header_item">
       {mlang en}File or Link{mlang}{mlang es}Archivo o Enlace{mlang}{mlang
       pt}Arquivo ou Link{mlang}{mlang fr}Fichier ou Lien{mlang}
     </div>
-
     <div class="header_item">
       {mlang en}Organization{mlang}{mlang es}Organización{mlang}{mlang
       pt}Organização{mlang}{mlang fr}Organisation{mlang}
     </div>
-
     <div class="header_item item-hmxw"></div>
-
     <!-- Repeated entry -->
       <div class="data-item">[[Category]]</div>
-      <div class="data-item">[[Needs1]][[Needs2]]</div>
+      <div class="data-item">[[Needs]]</div>
       <div class="data-item">
         <div class="title">
           <b>[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</b>
