--- a/dev/list-view/list-view-grid.html
+++ b/dev/list-view/list-view-grid.html
@@ -1,4 +1,3 @@
-<!-- Table header -->
 <div class="slst_body">
   <div class="grid-table-slst">
     <div class="header_item">
@@ -23,25 +22,21 @@
       pt}Organização{mlang}{mlang fr}Organisation{mlang}
     </div>
     <div class="header_item item-hmxw"></div>
-    <!-- Repeated entry -->
-      <div class="data-item">[[Category]]</div>
-      <div class="data-item">[[Needs]]</div>
-      <div class="data-item">
-        <div class="title">
-          <b>[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</b>
-        </div>
-        <div class="upload_date">
-          [[Upload Date EN]][[Upload Date ES]][[Upload Date FR]][[Upload Date
-          PT]]
-        </div>
-        <div class="description">
-          [[Description EN]][[Description ES]][[Description FR]][[Description
-          PT]]
-        </div>
+    <div class="data-item">[[Category]]</div>
+    <div class="data-item">[[Needs]]</div>
+    <div class="data-item">
+      <div class="title">
+        <b>[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</b>
       </div>
-      <div class="data-item">[[Organization]]</div>
-      <div class="data-item">[[Link EN]][[Link ES]][[Link FR]][[Link PT]]</div>
-      <div class="data-item item-mxw">##actionsmenu##</div>
-    <!-- footer -->
+      <div class="upload_date">
+        [[Upload Date]]
+      </div>
+      <div class="description">
+        [[Description EN]][[Description ES]][[Description FR]][[Description PT]]
+      </div>
+    </div>
+    <div class="data-item">[[Organization]]</div>
+    <div class="data-item">[[Link]]</div>
+    <div class="data-item item-mxw">##actionsmenu##</div>
   </div>
 </div>
