add entry (add link tooltip)

--- a/dev/add-entry/addentry.html
+++ b/dev/add-entry/addentry.html
@@ -389,10 +389,9 @@
       <div class="description-cont">
         <div class="description">
           {mlang en}If available through a web link, please insert the
-          URL{mlang} {mlang es}Si está disponible a través de un enlace web,
-          introduzca la URL{mlang} {mlang pt}Se estiver disponível por meio de
-          um link da Web, insira o URL{mlang} {mlang fr}Si le document est
-          disponible par le biais d'un lien web, veuillez insérer l'URL{mlang}
+          URL. For long URL addresses, please enter short text (<6 words) that will be displayed for the link.{mlang} {mlang es}Si está disponible a través de un enlace web,
+          introduzca la URL. Para direcciones URL largas, ingrese un texto breve (<6 palabras) que se mostrará para el enlace.{mlang} {mlang pt}. Para endereços URL longos, insira um texto curto (<6 palavras) que será exibido no link.{mlang} {mlang fr}Si le document est
+          disponible par le biais d'un lien web, veuillez insérer l'URL. Pour les adresses URL longues, veuillez saisir un texte court (<6 mots) qui sera affiché pour le lien.{mlang}
         </div>
         <div class="description">
           {mlang en}Upload at least one file, note that it has four controls to
