(column spacing)(font size)(limit title and description)

--- a/dev/list-view/list-view-grid.html
+++ b/dev/list-view/list-view-grid.html
@@ -25,11 +25,9 @@
     <div class="data-item">[[Category]]</div>
     <div class="data-item">[[Needs]]</div>
     <div class="data-item">
-      <div class="title">
-        <b>[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</b>
-      </div>
-      <div class="upload_date">
-        [[Upload Date]]
+      <div class="title_year">
+        <div class="title_c">[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</div>
+        <div class="year_c">[[[Year of Completion]]]</div>
       </div>
       <div class="description">
         [[Description EN]][[Description ES]][[Description FR]][[Description PT]]
