--- a/dev/list-view/list-view-grid.html
+++ b/dev/list-view/list-view-grid.html
@@ -26,15 +26,15 @@
     <div class="data-item">[[Needs]]</div>
     <div class="data-item">
       <div class="title_year">
-        <div class="title_c">[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</div>
-        <div class="year_c">[[[Year of Completion]]]</div>
+        <div class="title mx-chr">[[Title EN]][[Title ES]][[Title FR]][[Title PT]]</div>
+        <div class="Year">[[[Year of Completion]]]</div>
       </div>
-      <div class="description">
+      <div class="description mx-wrd">
         [[Description EN]][[Description ES]][[Description FR]][[Description PT]]
       </div>
     </div>
     <div class="data-item">[[Organization]]</div>
     <div class="data-item">[[Link]]</div>
-    <div class="data-item item-mxw">##actionsmenu##</div>
+    <div class="data-item item-hmxw">##actionsmenu##</div>
   </div>
 </div>
