--- a/dev/list-view/list-view-grid.html
+++ b/dev/list-view/list-view-grid.html
@@ -1,5 +1,6 @@
+<!-- Header -->
 <div class="slst_body">
-  <div class="grid-table-slst">
+  <div class="table-card-slst">
     <div class="header_item">
       {mlang en}Category{mlang}{mlang es}Categoría{mlang}{mlang
       pt}Categoria{mlang}{mlang fr}Catégorie{mlang}
@@ -22,6 +23,7 @@
         pt}Arquivo ou Link{mlang}{mlang fr}Fichier ou Lien{mlang}      
     </div>
     <div class="header_item item-hmxw"></div>
+    <!-- Repeated entry -->
     <div class="data-item">[[Category]]</div>
     <div class="data-item">[[Needs]]</div>
     <div class="data-item">
@@ -36,5 +38,6 @@
     <div class="data-item">[[Organization]]</div>
     <div class="data-item">[[Link]]</div>
     <div class="data-item item-hmxw">##actionsmenu##</div>
+<!-- Footer -->
   </div>
 </div>
