--- a/dev/list-view/list-view-grid.html
+++ b/dev/list-view/list-view-grid.html
@@ -1,6 +1,7 @@
 <!-- Header -->
 <div class="slst_body">
-  <div class="table-card-slst">
+
+  <div class="table_card_slst">
     <div class="header_item">
       {mlang en}Category{mlang}{mlang es}Categoría{mlang}{mlang
       pt}Categoria{mlang}{mlang fr}Catégorie{mlang}
@@ -36,6 +37,9 @@
     <div class="data-item">[[Organization]]</div>
     <div class="data-item">[[File FR]]<br/>[[File PT]]<br/>[[File ES]]<br/>[[Link]]</div>
     <div class="data-item item-hmxw">##actionsmenu##</div>
+
 <!-- Footer -->
   </div>
+
+
 </div>
