update lock translation button

--- a/dev/add-entry/addentry.html
+++ b/dev/add-entry/addentry.html
@@ -17,7 +17,7 @@
           </h6>
         </div>
         <div class="value" id="titleDivEN">[[Title EN]]</div>
-        <div>
+        <div class="lockTranslation">
           <input type="checkbox" id="TitlelockENTranslation"
             name="TitlelockENTranslation">
           <label for="TitlelockENTranslation">Lock translation</label>
@@ -58,7 +58,7 @@
           </h6>
         </div>
         <div class="value" id="titleDivES">[[Title ES]]</div>
-        <div>
+        <div class="lockTranslation">
           <input type="checkbox" id="TitlelockESTranslation"
             name="TitlelockESTranslation">
           <label for="TitlelockESTranslation">Lock translation</label>
@@ -90,7 +90,7 @@
           </h6>
         </div>
         <div class="value" id="titleDivFR">[[Title FR]]</div>
-        <div>
+        <div class="lockTranslation">
           <input type="checkbox" id="TitlelockFRTranslation"
             name="TitlelockFRTranslation">
           <label for="TitlelockFRTranslation">Lock translation</label>
@@ -122,7 +122,7 @@
           </h6>
         </div>
         <div class="value" id="titleDivPT">[[Title PT]]</div>
-        <div>
+        <div class="lockTranslation">
           <input type="checkbox" id="TitlelockPTTranslation"
             name="TitlelockPTTranslation">
           <label for="TitlelockPTTranslation">Lock translation</label>
@@ -153,7 +153,7 @@
         </h6>
       </div>
       <div class="value" id="descriptionEN">[[Description EN]]</div>
-      <div>
+      <div class="lockTranslation">
         <input type="checkbox" id="lockENTranslation" name="lockENTranslation">
         <label for="lockENTranslation">Lock translation</label>
       </div>
@@ -183,7 +183,7 @@
         </h6>
       </div>
       <div class="value" id="descriptionES">[[Description ES]]</div>
-      <div>
+      <div class="lockTranslation">
         <input type="checkbox" id="lockESTranslation" name="lockESTranslation">
         <label for="lockESTranslation">Lock translation</label>
       </div>
@@ -213,7 +213,7 @@
         </h6>
       </div>
       <div class="value" id="descriptionFR">[[Description FR]]</div>
-      <div>
+      <div class="lockTranslation">
         <input type="checkbox" id="lockFRTranslation" name="lockFRTranslation">
         <label for="lockFRTranslation">Lock translation</label>
       </div>
@@ -243,7 +243,7 @@
         </h6>
       </div>
       <div class="value" id="descriptionPT">[[Description PT]]</div>
-      <div>
+      <div class="lockTranslation">
         <input type="checkbox" id="lockPTTranslation" name="lockPTTranslation">
         <label for="lockPTTranslation">Lock translation</label>
       </div>
